# vernomic

./: .gitignore  README.md  pyproject.toml
examples/: example1.py  example2.py
tests/: test_vernomic.py
vernomic/: __init__.py  constants.py  vernomic.py
