[tool.poetry]
name = "vernomic"
version = "0.1.0"
description = "Mnemonic version naming based on 4-week cycles using animals and gemstones"
authors = ["Didac Cristobal <didac-crst@gmail.com>"]
readme = "README.md"
packages = [{ include = "vernomic" }]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
hypothesis = "^6.100"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
